Added GPL license.

--- a/boids.css
+++ b/boids.css
@@ -1,3 +1,5 @@
+/* Copyright Rupert Deese 2015 */
+/* Licensed under the GNU GPL http://www.gnu.org/licenses/gpl.txt */
 <style>
 * {
   -webkit-box-sizing: border-box;
